[package]
name = "dns-consist"
version = "0.1.0"
authors = ["Vlad Purcarea <vpurcarea@simscale.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1.6"
dirs = "1.0.5"
trust-dns-client = "0.20.0"
tokio = { version = "1", features = ["full"] }